--- a/src/index.html
+++ b/src/index.html
@@ -74,11 +74,11 @@
                     <h2 class="format__title title">2 удобных формата работы с нами:
                     </h2>
                     <div class="format__subtitle">
-                        <span class="format__subtitle-left">Лайт</span>
+                        <span class="format__subtitle-left active">Лайт</span>
                         <span class="format__subtitle-right">Под ключ</span>
                     </div>
                     <div class="format__content">
-                        <div class="format__left">
+                        <div class="format__left active">
                             <ul class="format__left-list">
                                 <li class="format__left-item">Вы сами организуете доставку груза до нашего
                                     склада в Вильнюсе</li>
