--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="#" target="_blank" id="open-pdf" style="display:none"></a>
+    <a href="./assets/price/Cargo_bayer_price.pdf" target="_blank" id="open-pdf" style="display:none"></a>
     <header class="header">
         <div class="container">
             <div class="header__inner">
